--- a/DGToolkit/Views/AudioPack/AudioPackView.xaml
+++ b/DGToolkit/Views/AudioPack/AudioPackView.xaml
@@ -3,37 +3,38 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:local="clr-namespace:DGToolkit.Views"
-      xmlns:dat54="clr-namespace:DGToolkit.Models.AudioPack.Dat54"
       mc:Ignorable="d"
-      d:DesignHeight="700" d:DesignWidth="1280"
+      d:DesignHeight="660" d:DesignWidth="1280"
       Title="AudioPackView">
     <StackPanel>
         <WrapPanel HorizontalAlignment="Left" VerticalAlignment="Top">
             <Button Margin="10, 10, 0, 0" Background="DarkRed" Foreground="white" Click="ResetPacks">Reset</Button>
             <Button Margin="10, 10, 0, 0" Click="SavePack" Content="Save" ToolTip="Write changes to the manifest" />
             <Button Margin="10, 10, 0, 0" Click="GeneratePacks" Content="Generate" ToolTip="Generate files to stream" />
-            <ComboBox Margin="10, 10, 0, 0" Name="DLCPackName" IsReadOnly="True" ItemsSource="{Binding Path=packNames}"
+            <ComboBox Margin="10, 10, 0, 0" Name="DLCPackName" IsReadOnly="True" ItemsSource="{Binding}"
                       Text="DLC Pack" SelectionChanged="LoadPack">
                 <ComboBox.ItemTemplate>
                     <DataTemplate>
-                        <TextBlock Text="{Binding Path=Name}" Foreground="{Binding}" />
+                        <StackPanel>
+                            <TextBlock Text="{Binding Path=Name}" />
+                        </StackPanel>
                     </DataTemplate>
                 </ComboBox.ItemTemplate>
-                <!-- <ComboBox.ItemContainerStyle> -->
-                <!--     <Style> -->
-                <!--         <Style.Triggers> -->
-                <!--             <DataTrigger Binding="{Binding Oversized}" Value="True" > -->
-                <!--                 <Setter Property="Foreground" Value="Color" /> -->
-                <!--             </DataTrigger> -->
-                <!--         </Style.Triggers> -->
-                <!--     </Style> -->
-                <!-- </ComboBox.ItemContainerStyle> -->
+                <ComboBox.ItemContainerStyle>
+                    <Style TargetType="ComboBoxItem">
+                        <Style.Triggers>
+                            <DataTrigger Binding="{Binding Oversized}" Value="True" >
+                                <Setter Property="Foreground" Value="DarkRed" />
+                                <Setter Property="FontSize" Value="700"></Setter>
+                            </DataTrigger>
+                        </Style.Triggers>
+                    </Style>
+                </ComboBox.ItemContainerStyle>
             </ComboBox>
             <Button Margin="10, 10, 0 0" Click="CreatNewPackClick">Add New AudioPack</Button>
         </WrapPanel>
         <Separator Visibility="Hidden"></Separator>
-        <DataGrid Height="650" Margin="10,0,10,0" Name="AudioEntries"
+        <DataGrid Height="610" Margin="10,0,10,0" Name="AudioEntries"
                   HorizontalAlignment="Stretch" ItemsSource="{Binding }" CanUserAddRows="True" IsReadOnly="False"
                   CanUserDeleteRows="True" AddingNewItem="AudioEntries_OnAddingNewItem" CanUserSortColumns="True"
                   AutoGenerateColumns="False">
