--- a/DGToolkit/MainWindow.xaml
+++ b/DGToolkit/MainWindow.xaml
@@ -6,16 +6,17 @@
         xmlns:local="clr-namespace:DGToolkit"
         mc:Ignorable="d"
         Title="MainWindow" Height="720" Width="1280">
-    <Grid>
-        <StackPanel>
-            <TabControl>
-                <TabItem Header="Audio Pack">
-                    <Frame Source="/Views/AudioPack/AudioPackView.xaml" />
-                </TabItem>
-                <TabItem Header="Vehicles">
-                    <Frame Source="/Views/Vehicles/VehicleWrapper.xaml" />
-                </TabItem>
-            </TabControl>
-        </StackPanel>
-    </Grid>
+    <StackPanel>
+        <TabControl>
+            <TabItem Header="Audio Pack">
+                <Frame Source="/Views/AudioPack/AudioPackView.xaml" />
+            </TabItem>
+            <TabItem Header="Audio Occlusion">
+                <Frame Source="/Views/AudioOcclusion/AudioOcclusion.xaml"></Frame>
+            </TabItem>
+            <TabItem Header="Vehicles">
+                <Frame Source="/Views/Vehicles/VehicleWrapper.xaml" />
+            </TabItem>
+        </TabControl>
+    </StackPanel>
 </Window>
