feat(clothing): add the basic for clothing tab

--- a/DGToolkit/MainWindow.xaml
+++ b/DGToolkit/MainWindow.xaml
@@ -12,6 +12,9 @@
                 <TabItem Header="Audio Pack">
                     <Frame Source="/Views/AudioPack/AudioPackView.xaml" />
                 </TabItem>
+                <TabItem Header="Clothing">
+                    <Frame Source="/Views/Clothing/ClothingView.xaml" />
+                </TabItem>
                 <TabItem Header="Vehicles">
                     <Frame Source="/Views/Vehicles/VehicleWrapper.xaml" />
                 </TabItem>
