--- a/DGToolkit/Views/AudioOcclusion/Paths.xaml
+++ b/DGToolkit/Views/AudioOcclusion/Paths.xaml
@@ -5,13 +5,21 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="clr-namespace:DGToolkit.Views.AudioOcclusion"
       mc:Ignorable="d"
-      Title="Paths" Height="590" Width="890">
-    <StackPanel Margin="10 10 10 10">
-        <TextBlock HorizontalAlignment="Center">From room</TextBlock>
-        <DataGrid Name="AudioPaths" HorizontalAlignment="Stretch" ItemsSource="{Binding }" CanUserAddRows="False"
-                  IsReadOnly="False" CanUserDeleteRows="False" CanUserSortColumns="False" AutoGenerateColumns="False"
-                  Loaded="AudioPaths_OnLoaded" Width="870" Height="550" MinColumnWidth="40"
-                  CellEditEnding="AudioPaths_OnCellEditEnding">
-        </DataGrid>
+      Title="Paths" Height="590" Width="925">
+    <StackPanel Orientation="Horizontal">
+        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="44">
+            <TextBlock.RenderTransform>
+                <RotateTransform Angle="-90"/>
+            </TextBlock.RenderTransform>
+            To room
+        </TextBlock>
+        <StackPanel>
+            <TextBlock HorizontalAlignment="Center">From room</TextBlock>
+            <DataGrid Name="AudioPaths" HorizontalAlignment="Stretch" ItemsSource="{Binding }" CanUserAddRows="False"
+                      IsReadOnly="False" CanUserDeleteRows="False" CanUserSortColumns="False" AutoGenerateColumns="False"
+                      Width="870" Height="550" MinColumnWidth="40"
+                      CellEditEnding="AudioPaths_OnCellEditEnding">
+            </DataGrid>
+        </StackPanel>
     </StackPanel>
 </Page>
