--- a/DGToolkit/Views/Clothing/ClothingView.xaml
+++ b/DGToolkit/Views/Clothing/ClothingView.xaml
@@ -1,23 +1,75 @@
-﻿<Page x:Class="DGToolkit.Views.Clothing.ClothingView"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:local="clr-namespace:DGToolkit.Views.Clothing"
-      mc:Ignorable="d"
-      Title="ClothingView"
-      Height="660" Width="1280">
-    <StackPanel Margin="10" Orientation="Horizontal">
-        <GroupBox Header="Drawables" Width="300">
-            <StackPanel>
-                <ListBox SelectionMode="Single" ItemsSource="{Binding}" Name="InteriorList" Height="585">
-                </ListBox>
-                <StackPanel Margin="0 10 0 0" Orientation="Horizontal">
-                    <Button Margin="0 0 10 0">Open YMT</Button>
-                    <Button Margin="0 0 10 0">Save YMT</Button>
-                    <Button Margin="0 0 10 0">Options</Button>
+﻿<Page
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    x:Class="DGToolkit.Views.Clothing.ClothingView"
+    mc:Ignorable="d"
+    Title="ClothingView"
+    d:Width="1280">
+    <DockPanel Margin="10">
+        <StackPanel Orientation="Vertical">
+            <ComboBox x:Name="DLCPackName" IsReadOnly="True" ItemsSource="{Binding}"
+                      Text="DLC Pack" SelectionChanged="LoadDLC">
+                <ComboBox.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel>
+                            <TextBlock Text="{Binding fullDlcName}" />
+                        </StackPanel>
+                    </DataTemplate>
+                </ComboBox.ItemTemplate>
+            </ComboBox>
+            <GroupBox Header="Drawables" Width="300">
+                <StackPanel>
+                    <ListBox SelectionMode="Single" x:Name="DrawableList"
+                             Height="565" IsSynchronizedWithCurrentItem="True"
+                             d:ItemsSource="{d:SampleData ItemCount=5}">
+                        <ListBox.ItemTemplate>
+                            <DataTemplate>
+                                <StackPanel Width="274">
+                                    <StackPanel.ContextMenu>
+                                        <ContextMenu>
+                                            <MenuItem Header="Remove" />
+                                        </ContextMenu>
+                                    </StackPanel.ContextMenu>
+                                    <TextBlock Text="{Binding DisplayName}" />
+                                </StackPanel>
+                            </DataTemplate>
+                        </ListBox.ItemTemplate>
+                    </ListBox>
+                    <Menu>
+                        <MenuItem Click="SaveAndGenerateClick" Header="Save/Generate" />
+                        <MenuItem Click="SelectStreamFolder" Header="⚙️Select stream folder" />
+                        <MenuItem Click="ViewLogClick" Header="Logs" />
+                    </Menu>
                 </StackPanel>
-            </StackPanel>
+            </GroupBox>
+        </StackPanel>
+        <GroupBox Header="Selected Drawable" HorizontalAlignment="Stretch" HorizontalContentAlignment="Stretch"
+                  Margin="10 0 00 0" Name="DrawableInfoPanel">
+            <DockPanel>
+                <Grid DockPanel.Dock="Top">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <GroupBox Grid.Column="0" Header="Cloth type">
+                        <ComboBox Name="ClothTypeBox" />
+                    </GroupBox>
+                    <GroupBox Grid.Column="1" Header="Drawable type">
+                        <ComboBox Name="DrawTypeBox"></ComboBox>
+                    </GroupBox>
+                </Grid>
+                <GroupBox Header="Textures">
+                    <DockPanel>
+                        <Menu DockPanel.Dock="Bottom">
+                            <MenuItem Header="Add Texture" />
+                            <MenuItem Header="Remove Texture" />
+                        </Menu>
+                        <ListBox></ListBox>
+                    </DockPanel>
+                </GroupBox>
+            </DockPanel>
         </GroupBox>
-    </StackPanel>
+    </DockPanel>
 </Page>
